# vae_ml_ops_old

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  com.py  command.py  commands.py  data.dvc  dvc_test.py  pyproject.toml
.dvc/: config
app/: dataset.py  infer.py  loss_func.py  model.py  train.py
conf/: config.yaml  my_callback.yaml  train.yaml
configs/: config.yaml
data/: .gitignore
mlruns/0/: meta.yaml
mlruns/354929040092931948/: meta.yaml
mlruns/354929040092931948/02d0705e172c455c803d8d3393d1ff13/: meta.yaml
mlruns/354929040092931948/0fc37e65873d4e07b530496934b87c8b/: meta.yaml
mlruns/354929040092931948/107225ead9144eb48e680e74682eca48/: meta.yaml
mlruns/354929040092931948/147eee44ee4548ec97674ade45a8816f/: meta.yaml
mlruns/354929040092931948/165fdd754d4d4c3d981b05b689947695/: meta.yaml
mlruns/354929040092931948/24bde97403454e5198b2bf5981dd479e/: meta.yaml
mlruns/354929040092931948/383a21fd2a28485791b39a3d81caa969/: meta.yaml
mlruns/354929040092931948/477f6a776bc343c690a4f357bd1c4c5b/: meta.yaml
mlruns/354929040092931948/4b6b80b4489e4d60ab116b72800e7985/: meta.yaml
mlruns/354929040092931948/55d1ec9f19e24feba82cdc4a982e4d10/: meta.yaml
mlruns/354929040092931948/5940f3f023314556951ddc03954bbf9d/: meta.yaml
mlruns/354929040092931948/59e6e862e4bc4cdf9c362dde48515f76/: meta.yaml
mlruns/354929040092931948/5f632edee9b04d6ba8601afe967c398f/: meta.yaml
mlruns/842467699877401673/: meta.yaml
mlruns/models/Autoencoder/: meta.yaml
models/: .gitignore  autoencoder  autoencoder.dvc
notebooks/: [seminar]vae.ipynb
src/: dataset.py  infer.py  loss_func.py  model.py  train.py
vae_ml_ops/: infer.py  train.py
(+160 files in other folders)
