[tool.poetry]
name = "vae-ml-ops"
version = "0.1.0"
description = "ML OPS tools for the face generation project"
authors = ["Dmitry Alekseev <a89652251224@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.27.1"
pandas = "^2.1.3"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
torch = "^2.1.1"
ipywidgets = "^8.1.1"
matplotlib = "^3.8.2"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
