[tool.poetry]
name = "vae-ml-ops"
version = "0.1.0"
description = "ML OPS tools for the face generation project"
authors = ["Dmitry Alekseev <a89652251224@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
torch = "^2.1.1"
ipywidgets = "^8.1.1"
matplotlib = "^3.8.2"
hydra-core = "^1.3.2"
dvc-gdrive = "^2.20.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
fire = "^0.5.0"
ipykernel = "^6.27.1"
dvc = "^3.33.2"

[tool.black]
line-length = 90
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[tool.pylint.messages_control]
disable = "C0114, E0401, C0103, R0914, E0402, R1725, R0201"

[tool.pylint.format]
max-line-length = "90"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
